tdf#95077 Check Index != 0

follow code:
ScVbaCollectionBase::getItemByIntIndex
....
return createCollectionObject( m_xIndexAccess->getByIndex( nIndex - 1 ) );
....
my test code of vba:
Application.ActiveWindow.Panes(1).View


Change-Id: I5229142377364f374e4bbc24bd3b8dfd5d351f56
Reviewed-on: https://gerrit.libreoffice.org/19239
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Norbert Thiebaud <nthiebaud@gmail.com>